--- a/backend/parent-project/application/pom.xml
+++ b/backend/parent-project/application/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>parent-project</artifactId>
 		<groupId>com.sharedPayments</groupId>
-		<version>${revision}</version>
+		<version>0.3-SNAPSHOT</version>
 	</parent>
 	<artifactId>application</artifactId>
 	<name>application</name>
