--- a/backend/parent-project/pom.xml
+++ b/backend/parent-project/pom.xml
@@ -97,7 +97,7 @@
 			<scope>runtime</scope>
 		</dependency>
 
-	
+
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -116,6 +116,11 @@
 							<arg>-parameters</arg>
 						</compilerArgs>
 						<annotationProcessorPaths>
+							<path>
+								<groupId>org.projectlombok</groupId>
+								<artifactId>lombok</artifactId>
+								<version>1.18.24</version>
+							</path>
 							<path>
 								<groupId>io.micronaut</groupId>
 								<artifactId>micronaut-inject-java</artifactId>
