fix: dockerfile now uses final artifact name

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,6 +9,6 @@ RUN mvn -B package
 #########################################################
 FROM openjdk:11-jdk-slim
 WORKDIR /backend/sharedPayments/
-COPY --from=builder /backend/parent-project/startup/target/startup-*.jar /backend/sharedPayments/
+COPY --from=builder /backend/parent-project/startup/target/startup.jar /backend/sharedPayments/
 EXPOSE 8080
-CMD [ "java", "-jar", "startup-0.3-SNAPSHOT.jar" ]
+CMD [ "java", "-jar", "startup.jar" ]
