--- a/backend/parent-project/startup/pom.xml
+++ b/backend/parent-project/startup/pom.xml
@@ -26,6 +26,7 @@
 		</dependency>
 	</dependencies>
 	<build>
+		<finalName>startup</finalName>
 		<plugins>
 			<plugin>
 				<groupId>io.micronaut.build</groupId>
