--- a/backend/parent-project/pom.xml
+++ b/backend/parent-project/pom.xml
@@ -148,6 +148,11 @@
 		</pluginManagement>
 		<plugins>
 			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>versions-maven-plugin</artifactId>
+				<version>2.11.0</version>
+			</plugin>
+			<plugin>
 				<artifactId>maven-failsafe-plugin</artifactId>
 				<configuration>
 					<classpathDependencyScopeExclude>runtime</classpathDependencyScopeExclude>
