ci: parenthesis on echo command

--- a/.github/workflows/releaseVersionCI.yml
+++ b/.github/workflows/releaseVersionCI.yml
@@ -30,7 +30,7 @@ jobs:
         working-directory: ./backend/parent-project
         run: echo ::set-output name=pom-version::$(mvn -q help:evaluate -Dexpression=project.version -DforceStdout) \
              && VERSION=$(echo $(mvn -q help:evaluate -Dexpression=project.version -DforceStdout) | sed 's/-SNAPSHOT*//') \
-             && echo $VERSION | awk -F. '/[0-9]+\./{$NF++;print}' OFS=.
+             && echo $(echo $VERSION | awk -F. '/[0-9]+\./{$NF++;print}' OFS=.)
         id: generate-pom-tag
       - name: Build Docker image
         run: ./buildDockerImages.sh
