ci: awk on runner

--- a/.github/workflows/releaseVersionCI.yml
+++ b/.github/workflows/releaseVersionCI.yml
@@ -28,7 +28,8 @@ jobs:
 
       - name: Generate pom version ouput
         working-directory: ./backend/parent-project
-        run: echo ::set-output name=pom-version::$(mvn -q help:evaluate -Dexpression=project.version -DforceStdout) \
+        run: sudo apt install gawk --yes
+             && echo ::set-output name=pom-version::$(mvn -q help:evaluate -Dexpression=project.version -DforceStdout) \
              && VERSION=$(echo $(mvn -q help:evaluate -Dexpression=project.version -DforceStdout) | sed 's/-SNAPSHOT*//') \
              && echo $(echo $VERSION | awk -F. '/[0-9]+\./{$NF++;print}' OFS=.)
         id: generate-pom-tag
