--- a/.github/workflows/releaseVersionCI.yml
+++ b/.github/workflows/releaseVersionCI.yml
@@ -28,10 +28,7 @@ jobs:
 
       - name: Generate pom version ouput
         working-directory: ./backend/parent-project
-        run: sudo apt install gawk --yes \
-             && echo ::set-output name=pom-version::$(mvn -q help:evaluate -Dexpression=project.version -DforceStdout) \
-             && VERSION=$(echo $(mvn -q help:evaluate -Dexpression=project.version -DforceStdout) | sed 's/-SNAPSHOT*//') \
-             && echo $(echo $VERSION | awk -F. '/[0-9]+\./{$NF++;print}' OFS=.)
+        run: echo ::set-output name=pom-version::$(echo $(mvn -q help:evaluate -Dexpression=project.version -DforceStdout) | sed 's/-SNAPSHOT*//' | awk -F. '/[0-9]+\./{$NF++;print}' OFS=.)
         id: generate-pom-tag
       - name: Build Docker image
         run: ./buildDockerImages.sh
