--- a/.github/workflows/releaseVersionCI.yml
+++ b/.github/workflows/releaseVersionCI.yml
@@ -28,8 +28,8 @@ jobs:
         working-directory: ./backend/parent-project
         run: echo ::set-output name=pom-version::$(echo $(mvn -q help:evaluate -Dexpression=project.version -DforceStdout) | sed 's/-SNAPSHOT*//' | awk -F. '/[0-9]+\./{$NF++;print}' OFS=.)
         id: generate-pom-tag
-     # - name: Build Docker image
-     #   run: ./buildDockerImages.sh
+      - name: Build Docker image
+        run: ./buildDockerImages.sh
 
      # - name: Create release
      #   uses: softprops/action-gh-release@v1
