fix: frontend dockerfile COPY CI fix

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,7 +3,7 @@ WORKDIR /frontend/sharedPaymentsWeb
 
 COPY sharedPaymentsWeb/*.json /frontend/sharedPaymentsWeb/
 COPY sharedPaymentsWeb/*.js /frontend/sharedPaymentsWeb/
-COPY sharedPaymentsWeb/src /frontend/sharedPaymentsWeb/src
+COPY sharedPaymentsWeb/src/ /frontend/sharedPaymentsWeb/src/
 
 RUN npm install -g @angular/cli
 RUN npm install
@@ -11,5 +11,5 @@ RUN ng build -c production
 
 #####################################
 FROM nginx:1.23
-COPY --from=builder /frontend/sharedPaymentsWeb/dist/shared-payments-web/*.* /usr/share/nginx/html
+COPY --from=builder /frontend/sharedPaymentsWeb/dist/shared-payments-web/*.* /usr/share/nginx/html/
 EXPOSE 80
