--- a/.github/workflows/releaseVersionCI.yml
+++ b/.github/workflows/releaseVersionCI.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  continuousIntegration:
+  UnitaryAndIntegrationTesting:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -20,10 +20,32 @@ jobs:
       - name: Unitary & Integration tests
         working-directory: ./backend/parent-project
         run: mvn clean install -P IT
+      
+  BuildAndDockerize:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: '11'
+
       - name: Build project & docker image
         working-directory: ./backend/parent-project
         run: mvn package
 
+  ReleaseAndUpgradeProjectVersion:
+    runs-on: ubuntu-latest
+    needs: [UnitaryAndIntegrationTesting, BuildAndDockerize]
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: '11'
+      
       - name: Read old pom version
         working-directory: ./backend/parent-project
         run: echo ::set-output name=pom-version::$(echo $(mvn -q help:evaluate -Dexpression=project.version -DforceStdout) | sed 's/-SNAPSHOT*//' )
@@ -35,7 +57,6 @@ jobs:
 
       - name: Create release
         uses: softprops/action-gh-release@v1
-      #  if: startsWith(github.ref, 'refs/tags/')
         with:
           tag_name: ${{ steps.old-version-number.outputs.pom-version }}
           prerelease: true
@@ -52,4 +73,4 @@ jobs:
       - name: Commit new pom versions
         uses: EndBug/add-and-commit@v9.1.0
         with:
-          message: 'CI: advancing pom versions'
+          message: 'Auto CI: advancing pom versions'
