--- a/backend/parent-project/infrastructure/pom.xml
+++ b/backend/parent-project/infrastructure/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>parent-project</artifactId>
 		<groupId>com.sharedPayments</groupId>
-		<version>0.10</version>
+		<version>0.3-SNAPSHOT</version>
 	</parent>
 	<artifactId>infrastructure</artifactId>
 	<name>infrastructure</name>
